update cache, level3_filters ok
